added divs for map & cards

--- a/index.html
+++ b/index.html
@@ -87,7 +87,16 @@
             </a>
           </div>
         </div>
-      </div>
+    </div>
+
+    <div class="map-select">
+        <!-- clickable map here -->
+    </div>
+
+    <div class="park-cards">
+        <!-- Alphabetical list of parks here -->
+    </div>
+
     <script src="assets/script.js"></script>
 </body>
 </html>
