added some style elements and defined areas for inputing data

--- a/parks.html
+++ b/parks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>National Parks</title>
     <link rel = "stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -14,7 +14,18 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+    <header class="container is-fullhd header">
+        <h1>Hungry Hungry Hiker</h1>
+        <p>About us section/instructions for use</p>
+    </header>
+
+    <div class="park-data">
+        <!-- data specific to select park appears here -->
+    </div>
     
+    <div class="nearby-food">
+        <!-- data for nearby restaurants goes here -->
+    </div>
 
     <script src="./assets/parks.js"></script>
 </body>
