added nps branch

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1>National Parks Restaurant Guide</h1>
         <p>About us section</p>
     </header>
+    <div id= "output"></div>
     <!-- need to toggle "is-active" using javascript -->
     <div class="dropdown is-active">
         <div class="dropdown-trigger">
@@ -98,5 +99,6 @@
     </div>
 
     <script src="assets/script.js"></script>
+    <script src="assest/parks.js"></script>
 </body>
 </html>
