updated colors, added svg to header, fiddled further with map

--- a/parks.html
+++ b/parks.html
@@ -14,10 +14,26 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    <header class="container is-fullhd header">
+    <header class="header">
         <h1>Hungry Hungry Hiker</h1>
-        <p>About us section/instructions for use</p>
-    </header>
+        <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 300" width="506" height="406" class="illustration styles_illustrationTablet__1DWOa">
+          <path d="M56.38,117.5c-30.22,41.86,0,113.47,0,113.47h289c8-57.85,31.75-149.94-77.48-168.92C230.54,55.56,97.42,60.64,56.38,117.5Z" fill="#e6e6e6" opacity="0.3">
+          </path>
+          <circle cx="270.71" cy="86.54" r="20.74" fill="#ffd200"></circle>
+          <circle cx="270.71" cy="86.54" r="32.42" fill="#ffd200" opacity="0.15"></circle>
+          <path d="M323.8,152.76a5,5,0,0,0-1.69.3,8.55,8.55,0,1,0-16.71-2.59c0,.23,0,.45,0,.68a6.13,6.13,0,0,0-2.8-.68,6.2,6.2,0,0,0,0,12.39H323.8a5.05,5.05,0,0,0,0-10.1Z" fill="#ffffff" opacity="0.52"></path>
+          <path d="M122,97.2a8.94,8.94,0,0,0-2.94.51,14.85,14.85,0,1,0-29-4.48c0,.39,0,.78.06,1.17a10.75,10.75,0,1,0-4.86,20.33H122a8.77,8.77,0,1,0,0-17.53Z" fill="#ffffff" opacity="0.52"></path>
+          <path d="M337.61,234.26H62.39s29.16-56.77,36.45-59.7,14.88-5.5,14.88-5.5,14.28-33.69,20.06-37.35,18.53-5.13,21.26-9.53c2.52-4,19.9-33.42,26.24-38.17a2.59,2.59,0,0,1,1.4-.64c4.56,0,44,52.74,44,52.74s12-.54,18,1.84a6.9,6.9,0,0,1,2.4,1.45c3.95,4,22.48,25.64,25.82,25.64,2.59,0,14.87,3.08,22.66,6.35a24.76,24.76,0,0,1,5.28,2.8C306,178.22,333.66,209.35,337.61,234.26Z" fill="#68e1fd"></path>
+          <path d="M307.18,228c2,.51,4,1.7,6,1.17a8.89,8.89,0,0,0,3.11-2,22.7,22.7,0,0,1,15.94-5,13.87,13.87,0,0,1,7.38,2.51,20.05,20.05,0,0,1,4.28,5.14l7.67,11.68c-20.36.72-44,1-63.67-4.89C288.83,231.32,302.23,226.72,307.18,228Z" fill="#425d29"></path>
+          <path d="M180.26,100.22c-4.26,8-10.29,15.61-13.44,24.36-4.19,11.65-2.9,29.3-2.32,41.87-5-4.11-7.9-12.36-13.87-13.29-4.82-.75-9,3.87-11.81,8.69a20.08,20.08,0,0,0-2.8,7.37c-.46,3.46.48,6.95.87,10.42s.07,7.51-2.2,9.71c-1.37,1.33-3.19,1.71-4.86,2.39-5.56,2.25-9.93,8.31-11,15.26s1.19,12.83,4.64,18.09c1.48,2.26,5.66,9.17,8.18,9.17H62.39s29.16-56.77,36.45-59.7,14.88-5.5,14.88-5.5,14.28-33.69,20.06-37.35,18.53-5.13,21.26-9.53c2.52-4,19.9-33.42,26.24-38.17l1.4-.64S183,95.08,180.26,100.22Z" opacity="0.2"></path>
+          <path d="M229.77,206.88c-.07,9.9,3.13,23.63,3.95,27.38H186.79s15.48-13.37,18.68-16.12c4.56-3.93,6-17.36,7.43-23.41,1.12-4.83,3-6.4,5.62-10.28a47,47,0,0,0,6.09-14.3c1.67-6.48,3.07-14.3,2.91-21.13,0-1.44-2-12.85-.79-12.91,0,0,12-.54,18,1.84-1,2.35-1.93,4.75-2.31,6-.65,2.2.21,4.26.58,6.34.55,3,.77,6,1.07,9.16.69,7.5,2.06,14.89,3.05,22.34,1.38,10.45,2,21.41-.9,31.41-1.37-3.16-2.1-6.66-3.42-9.85s-3.44-6.19-6.32-7C231.43,195.06,229.82,200.06,229.77,206.88Z" opacity="0.2"></path>
+          <path d="M291.44,180.42c-2.13,7.32,0,34.79,0,34.79a116.06,116.06,0,0,1-6.39-22c-1.82-11-12.14-28.19-12.14-28.19,2.59,0,14.87,3.08,22.66,6.35A49.46,49.46,0,0,0,291.44,180.42Z" opacity="0.2"></path>
+          <path d="M57.33,227.57l8.93-11.66A8.68,8.68,0,0,1,69,213.26c4.49-2.24,9.1,4.09,14.09,3.6,2.48-.25,4.43-2.13,6.55-3.45a15.76,15.76,0,0,1,13-1.56c1.54.5,3.06,1.27,4.69,1.24,2,0,3.77-1.21,5.4-2.35l11.85-8.27c1.89-1.32,3.9-2.68,6.19-2.89,2.56-.22,5,1,7.25,2.24l21,11.27a17.57,17.57,0,0,0,5.76,2.26c7.5,1,14-7.66,21.42-5.95,4.06.95,6.89,4.84,10.9,6,3.28.92,6.75-.14,10.15-.32,13.42-.7,31.41,14.74,37.2,26.16a367.67,367.67,0,0,1-39.14-.44,105.83,105.83,0,0,1-16.66-2.09c-27.39-6.19-57.27-3.21-85.38-3.21H53" fill="#425d29"></path>
+          <rect x="41.62" y="234.26" width="316.76" height="11.62" rx="5.81" fill="#425d29"></rect>
+        </svg>
+          
+        <p>Find the best places to eat near US National Parks! Choose a state below to get started!</p>
+      </header>
 
     <div class="park-data">
         <!-- data specific to select park appears here -->
@@ -26,6 +42,10 @@
     <div class="nearby-food">
         <!-- data for nearby restaurants goes here -->
     </div>
+
+    <footer>
+        <p>This project created by Josh, Kelsie, and Shuo</p>
+    </footer>
 
     <script src="./assets/parks.js"></script>
     <script src="assets/yelp.js"></script>
