added styling and fixed click event for map

--- a/parks.html
+++ b/parks.html
@@ -11,6 +11,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@400;700&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
@@ -34,7 +35,7 @@
           
         <p>Find the best places to eat near US National Parks! Choose a state below to get started!</p>
       </header>
-
+      <a href= "./index.html" class="button returnBtn">Return to Home</a>
     <div class="park-data">
         <!-- data specific to select park appears here -->
     </div>
