final touches, updated readme, added pptx

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <rect x="41.62" y="234.26" width="316.76" height="11.62" rx="5.81" fill="#425d29"></rect>
         </svg>
       </div>
-      <p>Find the best places to eat near US National Parks! Choose a state below to get started!</p>
+      <p>Find the best places to eat near US National Parks!</p>
     </header>
     <div class="columns is-centered">
       <div class="column is-full">
