fine tuning a couple things - link to nps park on parks page, added comments, fixed issue where cost not showing up

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <title>National Parks</title>
 </head>
 <body>
+    <!-- First page user sees -->
     <header class="header">
       <h1>Hungry Hungry Hiker</h1>
+      <!-- SVG mountain image -->
       <div class="svg-container">
         <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 400" width="500" height="400" preserveAspectRatio="xMinYMin meet" class="illustration styles_illustrationTablet__1DWOa">
           <path d="M56.38,117.5c-30.22,41.86,0,113.47,0,113.47h289c8-57.85,31.75-149.94-77.48-168.92C230.54,55.56,97.42,60.64,56.38,117.5Z" fill="#e6e6e6" opacity="0.3">
@@ -39,6 +41,7 @@
     <div class="columns is-centered">
       <div class="column is-full">
         <div class="select-state">
+          <!-- Dropdown button -->
           <div class="dropdown">
               <div class="dropdown-trigger">
                 <button class="button" aria-haspopup="true" aria-controls="dropdown-menu3">
@@ -110,7 +113,6 @@
     <div class="is-hidden-touch select-map">
       <div class="map-select is-8">
         <!-- clickable map here -->
-        <!-- <img src="./assets/Blank_US_Electoral_Map.svg"> -->
         <div id="info-box"></div>
         <?xml version="1.0" encoding="utf-8"?>
         <svg xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="us-map" preserveAspectRatio="xMinYMin meet" sodipodi:docname="Republican_Party_presidential_primaries_results,_2016.svg" inkscape:version="0.91 r13725" x="0px" y="0px" width="959px" height="593px" viewBox="174 100 959 593" enable-background="new 174 100 959 593" xml:space="preserve">
